# megakernel

./: .gitignore  .gitmodules  LICENSE  Qwen3解码实现与调试.md  README.md  make.sh  pyproject.toml  python_vm_debug_v2.json  qwen3_torch_debug_v2.json  test.py  test_sglang.py  test_vllm.py
demos/latency/: mk.py  scheduler.py
demos/latency_v1/: instructions.py  python_vm.py
demos/llama3b/: Makefile  attention_partial.cu  attention_reduction.cu  llama.cu  llama.cuh  mk.py  scheduler.py  upgate.cu  utils.cuh
demos/llama3b_v1/: Makefile_debug  attention_partial.cu  matvec_adds.cu  matvec_pipeline.cuh  rms_lm_head.cu  rms_matvec_rope_append.cu  scheduler.py
demos/low-latency-llama/: Makefile  attention_partial.cu  attention_reduction.cu  llama.cuh  matvec_adds.cu  rms_lm_head.cu  rms_matvec_rope_append.cu  upgate.cu  utils.cuh
demos/low-latency-llama_v1/: attention_partial.cu  llama.cu  llama.cuh  matvec_adds.cu  matvec_pipeline.cuh  (+4 more)
include/: config.cuh  consumer.cuh  launcher.cuh  llama_3b_config.cuh  loader.cuh  megakernel.cuh  noop.cuh  storer.cuh  util.cuh
megakernels/: AutoModel.py  dispatch.py  gen4verifier.py  generators.py  genforcausal.py  gfq2.py  instructions.py  llama.py  mk.py  model_types.py  python_vm.py  qwen.py  qwen2_moe.py  scheduler.py  test.py  utils.py
scripts/: llama_repl_3b.py  make_torch_profile.py  python_verifier.py
util/: pyproject.toml
util/mk_init/: __init__.py  main.py
util/mk_init/sources/: README.md  setup.py
util/mk_init/sources/src/: config.cuh  {{PROJECT_NAME_LOWER}}.cu
util/mk_init/sources/tests/: test_example.py
(+34 files in other folders)
