[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mk-init"
version = "0.1.0"
description = "Megakernel initialization"
authors = [{name = "bfs", email = "benjaminfspector@gmail.com"}]

[project.scripts]
mk-init = "mk_init.main:main"

[tool.setuptools.packages.find]
include = ["mk_init*"]

[tool.setuptools.package-data]
mk_init = ["sources/**/*"]